# internal/modules/user/requests/auth/refresh_request.go
@@ -1,0 +1,5 @@
+package auth
+
+type RefreshRequest struct {
+	RefreshToken string `json:"refresh_token" form:"refresh_token" binding:"required"`
+}
